--- a/package.json
+++ b/package.json
@@ -1,28 +1,18 @@
 {
-  "name": "facebook-clone",
+  "name": "onjabook",
   "version": "1.0.0",
-  "description": "",
+  "description": "small facebook clone",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lightme-fan/facebook-clone.git"
-  },
-  "author": "",
+  "author": "Loïc Lepinois",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lightme-fan/facebook-clone/issues"
-  },
-  "homepage": "https://github.com/lightme-fan/facebook-clone#readme",
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-is": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1"
-  },
-  "devDependencies": {
-    "sass": "^1.29.0"
   }
 }
